workflows: 添加复制步骤 scripts: 添加复制脚本，添加注释 packages: 测试构建一个包

--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -57,7 +57,12 @@ jobs:
         if: ${{ env.NEED_BUILD == 'true' }}
         run: |
           scripts/sign rpm
-      
+
+      - name: Copy rpms
+        if: ${{ env.NEED_BUILD == 'true' }}
+        run: |
+          scripts/copy
+
       - name: Update repodata
         if: ${{ env.NEED_BUILD == 'true' }}
         run: |
