--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup basic build dependency
         if: ${{ env.NEED_BUILD == 'true' }}
         run: |
-          zypper --non-interactive install make rpmbuild rpmlint rpmdevtools pattern:devel_basis createrepo_c
+          zypper --non-interactive install make rpmbuild rpmdevtools pattern:devel_basis createrepo_c
 
       - name: Setup rclone
         if: ${{ env.NEED_BUILD == 'true' }}
