--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -19,6 +19,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Debug git dir problem
+        run: |
+          ls -lha
+
       - name: Check NVR
         run: scripts/nvrop check
 
