--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: opensuse/tumbleweed:latest
+      options: --hostname Build-Test
 
     steps:
       - name: Setup git, jq
@@ -18,10 +19,6 @@ jobs:
 
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Debug git dir problem
-        run: |
-          ls -lha
 
       - name: Check NVR
         run: scripts/nvrop check
@@ -89,8 +86,9 @@ jobs:
 
       - name: Commit lock.json
         if: ${{ env.NEED_BUILD == 'true' }}
+        # 先设置safe.directory
+        # https://github.com/actions/checkout/issues/335#issuecomment-2465968913
         run: |
-          # https://github.com/actions/checkout/issues/335#issuecomment-2465968913
           git config --global --add safe.directory "$(pwd)"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
