--- a/scripts/build
+++ b/scripts/build
@@ -36,7 +36,8 @@ for name in $(jq -r 'keys[]' "$file"); do
   fi
 
   # 构建包
-  echo "开始构建 $name"
+  echo "开始构建: $name"
   rpmbuild --undefine=_disable_source_fetch -bb "$SPEC_FILE"
+  echo "构建完成: $name"
   clear_dir
 done
