--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install Rclone, GPG, createrepo
         run: |
           apt update
-          apt install -y rclone gpg createrepo-c
+          apt install -y rclone gpg createrepo-c dnf
 
       - name: Pull yum repo
         env:
