--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -6,6 +6,9 @@ jobs:
   job1:
     runs-on: ubuntu-24.04
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
       - name: Install Rclone, GPG, createrepo
         run: |
           sudo apt update
