--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -39,10 +39,10 @@ jobs:
           gpg --detach-sign --armor --batch --yes --local-user "$GPG_SEC_ID" "copy/repodata/repomd.xml"
           gpg --batch --yes --delete-secret-keys "$GPG_SEC_ID"
 
-      - name: Update list.json
-        run: scripts/gen-list -r copy -o copy/repodata/list.json
+      - name: Generate list.json
+        run: scripts/gen-list -r "$(pwd)/copy" -o copy/repodata/list.json
 
-      - name: Push yum repo
+      - name: Push metadata
         env:
           RCLONE_CONFIG_VAL: ${{ secrets.RCLONE_CONFIG }}
         run: |
