--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -17,8 +17,8 @@ on:
         required: true
       GPG_SECRET_ID:
         required: true
-      GITHUB_TOKEN:
-        required: true
+      TOKEN:
+        required: false
 
 jobs:
   job1:
@@ -30,6 +30,7 @@ jobs:
           repository: anm1n/yum2
           path: tools
           fetch-depth: 1
+          token: ${{ secrets.TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: Install Rclone, GPG, createrepo
         run: |
