Fix: Do not run the matrix when no build is needed

--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -95,6 +95,7 @@ jobs:
 
   build:
     needs: prepare
+    if: ${{ join(fromJson(needs.prepare.outputs.matrix)) != '' }}
     runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
