--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -42,6 +42,9 @@ on:
 jobs:
   prepare:
     runs-on: ubuntu-24.04
+    defaults:
+      run:
+        shell: bash
     outputs:
       matrix: ${{ steps.gen-matrix.outputs.matrix }}
     steps:
