--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -110,6 +110,9 @@ jobs:
     needs: prepare
     if: ${{ join(fromJson(needs.prepare.outputs.matrix)) != '' }}
     runs-on: ubuntu-24.04
+    defaults:
+      run:
+        shell: bash
     container:
       image: ${{ matrix.image }}
       options: --hostname ${{ inputs.hostname }}
